--- a/shuttleofx_client/static_tmp/styles/styles.less
+++ b/shuttleofx_client/static_tmp/styles/styles.less
@@ -271,7 +271,6 @@ header{
 
 
 .header-content{
-    padding-right: 265px;
     //height:80px;
     color: #fff;
     width: 100%;
